Add ability to use config to specify JQuery type
Config can be used to include the full version of JQuery. By default the slim version is included

--- a/layouts/partials/foot.html
+++ b/layouts/partials/foot.html
@@ -1,4 +1,8 @@
-{{ $jquery  := resources.Get "js/jquery.slim.js" }}
+{{ $jquery := resources.Get "js/jquery.slim.js" }}
+{{ if eq .Site.Params.jqueryType "full" }}
+  {{ $jquery = resources.Get "js/jquery.js" }}
+{{ end }}
+
 {{ $feather := resources.Get "js/feather.js" }}
 
 {{ $global := resources.Get "script.js" }}
