Fix the customhead block
Ensure custom header content is included in the head tag

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="{{ .Site.LanguageCode }}">
-  {{ partial "head.html" . }}
-  {{ block "customhead" . }}{{ end }}
+  <head>
+    {{ partial "head.html" . }}
+    {{ block "customhead" . }}{{ end }}
+  </head>
   <body>
     <div id="wrapper">
       <div class="container">
