Fix feather icons
Add a class to the feather icon placeholder to prevent content shifts when the icons are rendered

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -78,6 +78,11 @@ h3 .feather {
   vertical-align: bottom;
 }
 
+i.feather {
+  height: 1em !important;
+  width: 1em !important;
+}
+
 /* improve display of cards */
 .card {
   display: flex;
