Update theme module to support other websites
Including:

- Photo gallery
- Floss manager

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,8 +4,11 @@
     {{- partial "head.html" . -}}
   </head>
   <body class="has-background-dark has-text-light has-navbar-fixed-top">
-    {{- partial "header.html" . -}}
-    {{- block "main" . }}{{- end }}
-    {{- partial "footer.html" . -}}
+      {{- partial "header.html" . -}}
+      <div id="wrapper">
+        {{- block "main" . }}{{- end }}
+      </div>
+      {{- partial "footer.html" . -}}
+      {{- block "customfoot" . }}{{- end }}
   </body>
 </html>
