--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -1,9 +1,25 @@
 @import "./css/bulma/bulma.sass";
 
+body {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+#wrapper {
+  flex: 1;
+}
+
 #hero .content a,
 #hero .content a:hover {
   color: hsl(204, 86%, 53%);
 }
+
+#about .content a,
+#about .content a:hover {
+  color: #f5f5f5;
+}
+
 
 .hero a, .hero a:hover {
   text-decoration: underline;
@@ -28,3 +44,30 @@ footer .level {
     margin-right: 30rem !important;
   }
 }
+
+.card {
+  display: flex;
+  flex-direction: column;
+}
+
+.card-footer {
+  margin-top: auto
+}
+
+.is-fullheight {
+  height: 100%
+}
+
+.is-photo-card figure img{
+  max-width: 500px;
+  height: auto;
+}
+
+.tags .tag {
+  height: auto !important;
+}
+
+.card-footer-item {
+  margin-bottom: auto !important;
+}
+
