--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,28 +1,29 @@
 {{ define "main" }}
 <div class="container">
+  {{ with .Site.Params.hero }}
     <section class="hero has-text-light is-large" id="hero">
         <div class="hero-body">
           <div class="columns">
             <div class="column">
               <h1>
                 <span class="subtitle has-text-primary mb-5">
-                  {{ .Site.Params.hero.intro }}
+                  {{ .intro }}
                 </span><br>
                 <span class="title has-text-light is-size-1 mb-5">
-                  {{ .Site.Params.hero.title }}
+                  {{ .title }}
                 </span>
               </h1>
               <p class="subtitle has-text-light is-size-2">
-                {{ .Site.Params.hero.subtitle }}
+                {{ .subtitle }}
               </p>
               <div class="content">
-                {{ .Site.Params.hero.content | markdownify }}
+                {{ .content | markdownify }}
               </div>
               <a class="button is-primary" href="{{print ( "/" | absURL) "#about" }}">About me</a>
             </div>
             <div class="column is-one-quarter is-justify-content-center">
               <figure class="image is-hidden-mobile">
-                <img alt="" src="{{ .Site.Params.hero.image | absURL }}">
+                <img alt="" src="{{ .image | absURL }}">
               </figure>
             </div>
           </div>
@@ -33,22 +34,24 @@
 
       </div>
     </div>
+  {{ end }}
+  {{ with .Site.Params.about }}
     <section class="hero has-background-primary-dark is-medium" id="about">
       <div class="hero-body">
         <div class="columns">
           <div class="column is-one-quarter is-justify-content-center">
             <figure class="image">
-              <img alt="" src="{{ .Site.Params.about.image | absURL }}">
+              <img alt="" src="{{ .image | absURL }}">
             </figure>
           </div>
           <div class="column">
             <h2 class="title has-text-white	is-size-1">
-              {{ .Site.Params.about.title }}
+              {{ .title }}
             </h2>
             <div class="content">
-              {{ .Site.Params.about.content | markdownify }}
+              {{ .content | markdownify }}
               <ul>
-                {{ range .Site.Params.about.skills.items }}
+                {{ range .skills.items }}
                 <li>{{ . | markdownify }}</li>
                 {{ end }}
               </ul>
@@ -62,10 +65,12 @@
 
       </div>
     </div>
+  {{ end }}
+  {{ with .Site.Params.certifications }}
     <section class="hero is-warning is-medium" id="certifications">
       <div class="hero-body">
         <div class="content is-justify-content-center">
-          {{ range .Site.Params.certifications.badges.items }}
+          {{ range .badges.items }}
             <div class="media">
               <div class="media-content">
                 <div class="content">
@@ -98,23 +103,25 @@
 
       </div>
     </div>
+  {{ end }}
+  {{ with .Site.Params.projects }}
     <section class="hero is-link is-medium " id="projects">
       <div class="hero-body">
         <div class="columns">
           <div class="column is-one-quarter is-justify-content-center">
             <figure class="image">
-              <img alt="" src="{{ .Site.Params.projects.image | absURL }}">
+              <img alt="" src="{{ .image | absURL }}">
             </figure>
           </div>
           <div class="column">
             <h2 class="title is-size-1">
-              {{ .Site.Params.projects.title }}
+              {{ .title }}
             </h2>
             <div class="content">
               <p>
-                {{ .Site.Params.projects.content | markdownify }}
+                {{ .content | markdownify }}
               </p>
-              {{ range .Site.Params.projects.items }}
+              {{ range .items }}
                 <p class="title is-size-3">{{ .title }}</p>
                 {{ .description | markdownify }}
                 <p>
@@ -131,25 +138,27 @@
 
       </div>
     </div>
+  {{ end }}
+  {{ with .Site.Params.favourites }}
     <section class="hero is-success is-medium " id="favourites">
       <div class="hero-body">
         <div class="columns">
           <div class="column is-one-quarter is-justify-content-center">
             <figure class="image">
-              <img alt="" src="{{ .Site.Params.favourites.image | absURL }}">
+              <img alt="" src="{{ .image | absURL }}">
             </figure>
           </div>
           <div class="column">
             <h2 class="title is-size-1">
-              {{ .Site.Params.favourites.title }}
+              {{ .title }}
             </h2>
             <div class="content">
               <p>
-                {{ .Site.Params.favourites.content | markdownify }}
+                {{ .content | markdownify }}
               </p>
             </div>
             <div class="columns is-multiline">
-                {{ range .Site.Params.favourites.items }}
+                {{ range .items }}
                   <div class="column is-4">
                     <div class="content">
                       <p class="title is-size-3">{{ .title }}</p>
@@ -173,22 +182,24 @@
 
       </div>
     </div>
+  {{ end }}
+  {{ with .Site.Params.contact }}
     <section class="hero is-info is-medium" id="contact">
       <div class="hero-body">
         <div class="columns">
           <div class="column is-one-quarter is-justify-content-center">
             <figure class="image">
-              <img alt="" src="{{ .Site.Params.contact.image | absURL }}">
+              <img alt="" src="{{ .image | absURL }}">
             </figure>
           </div>
           <div class="column">
             <h2 class="title is-size-1">
-              {{ .Site.Params.contact.title }}
+              {{ .title }}
             </h2>
             <div class="content">
-              {{ .Site.Params.contact.content | markdownify }}
+              {{ .content | markdownify }}
               <p>
-                <a class="button is-primary" href="mailto:{{ .Site.Params.contact.email }}">Contact me</a>
+                <a class="button is-primary" href="mailto:{{ .email }}">Contact me</a>
               </p>
             </div>
           </div>
@@ -200,6 +211,7 @@
 
       </div>
     </div>
+  {{ end }}
 </div>
 
 {{ end }}
