--- a/layouts/index.html
+++ b/layouts/index.html
@@ -129,7 +129,7 @@
                 <p class="title is-size-3">{{ .title }}</p>
                 {{ .description | markdownify }}
                 <p>
-                  <a href="{{ .more }}" target="_blank" rel="noopener">More information</a>
+                  <a href="{{ .more }}" target="_blank" rel="noopener noreferrer">More information</a>
                 </p>
               {{ end }}
             </div>
@@ -169,7 +169,7 @@
                       <ul>
                       {{ range .links }}
                         <li>
-                          <a href="{{ .url }}" target="_blank" rel="noopener">{{ .title | markdownify }}</a>
+                          <a href="{{ .url }}" target="_blank" rel="noopener noreferrer">{{ .title | markdownify }}</a>
                         </li>
                       {{ end }}
                       </ul>
