--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,7 +1,14 @@
 <footer class="footer">
     <div class="content has-text-centered has-text-dark">
       <p>
-        A <a href="https://techxplorer.com">Techxplorer</a> project. Copyright &copy; {{ .Site.Params.copyrightYear | default 2019 }} - {{ now.Year }}.
+        A <a href="https://techxplorer.com">Techxplorer</a> project. Copyright &copy;
+        {{ $startYear := .Site.Params.copyrightYear | default 2019 }}
+        {{ $currentYear := now.Year }}
+        {{ if ne $startYear $currentYear }}
+          {{ $startYear }} - {{ $currentYear }}
+        {{ else }}
+          {{ $startYear }}
+        {{ end }}
       </p>
     </div>
     <div class="content has-text-centered has-text-dark">
