Improve generation of page titles
Include the section / parent title where appropriate

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,6 +1,19 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>{{ .Site.Title }}</title>
+
+{{ $title := .Title }}
+{{ if .IsHome }}
+  {{ $title = .Site.Title }}
+{{ else if .IsPage }}
+  {{ with .Parent }}
+  {{ $title = print .Title " - " $title }}
+  {{ end }}
+{{ else if .IsSection }}
+  {{ $title = print .Site.Title " - "  .Title }}
+{{ end }}
+<title>
+  {{ $title }}
+</title>
 
 {{ with $.Param "author" }}<meta name="author" content="{{ . }}">{{ end }}
 {{ with $.Param "contactLink" }}<meta name="contact" content="{{ . }}">{{ end }}
