--- a/layouts/partials/twitter_cards.html
+++ b/layouts/partials/twitter_cards.html
@@ -18,7 +18,17 @@
 {{- end -}}
 {{- end -}}
 {{- end }}
-<meta name="twitter:title" content="{{ .Title }}">
+{{ $title := .Title }}
+{{ if .IsHome }}
+  {{ $title = .Site.Title }}
+{{ else if .IsPage }}
+  {{ with .Parent }}
+  {{ $title = print .Title " - " $title }}
+  {{ end }}
+{{ else if .IsSection }}
+  {{ $title = print .Site.Title " - "  .Title }}
+{{ end }}
+<meta name="twitter:title" content="{{ $title}}">
 <meta name="twitter:description" content="{{ with .Description }}{{ . }}{{ else }}{{if .IsPage}}{{ .Summary }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}{{ end -}}">
 {{ with .Site.Social.twitter -}}
 <meta name="twitter:site" content="@{{ . }}">
