--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -74,3 +74,11 @@ footer .level {
 .hero-body .media+.media {
   border: none;
 }
+
+#wrapper > div {
+  height: 80vh;
+}
+
+.footer {
+  padding-bottom: 2rem !important;
+}
