Improve default rendering of single pages

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,7 +1,10 @@
 {{ define "main" }}
-<section class="box mt-2">
-  <div class="content">
-    {{ .Content }}
-  </div>
-</section>
+<div class="container has-background-white has-text-grey-darker pb-6">
+  <section class="mt-4">
+    <div class="content my-4 px-4 pt-4">
+      <h1>{{.Title}}</h1>
+      {{ .Content }}
+    </div>
+  </section>
+</div>
 {{ end }}
