Add CSS for CC license

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -82,3 +82,13 @@ footer .level {
 .footer {
   padding-bottom: 2rem !important;
 }
+
+.is-license a {
+  display: inline-block;
+}
+
+.is-license img {
+  height: 22px!important;
+  margin-left: 3px;
+  vertical-align: text-bottom;
+}
