--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,4 +1,5 @@
 {{ define "main" }}
+<section>
 <div class="container">
   {{ with .Site.Params.hero }}
     <section class="hero has-text-light is-large" id="hero">
@@ -216,6 +217,7 @@
       </div>
     </div>
   {{ end }}
-</div>
 
+</div>
+</section>
 {{ end }}
