--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -2,12 +2,17 @@
 
 body {
   display: flex;
-  min-height: 100vh;
+  height: 100vh;
   flex-direction: column;
+}
+
+html {
+  height: 100vh;
 }
 
 #wrapper {
   flex: 1;
+  overflow-y: auto;
 }
 
 #hero .content a,
@@ -73,10 +78,6 @@ footer .level {
 
 .hero-body .media+.media {
   border: none;
-}
-
-#wrapper > div {
-  height: 80vh;
 }
 
 .footer {
