Add the is-gallery-thumb
Add a CSS class to fix the height and width of thumbnails on the photo gallery

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -93,3 +93,9 @@ footer .level {
   margin-left: 3px;
   vertical-align: text-bottom;
 }
+
+.is-gallery-thumb img {
+  max-height: 128px;
+  max-width: 128px;
+  object-fit: cover;
+}
