--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -105,3 +105,8 @@ footer .level {
   initial-letter: 2;
   -webkit-initial-letter: 2;
 }
+
+.image.is-256x256 {
+  height: 256px;
+  width: 256px;
+}
