--- a/layouts/partials/opengraph.html
+++ b/layouts/partials/opengraph.html
@@ -1,14 +1,8 @@
-{{ $title := .Title }}
-{{ if .IsHome }}
-  {{ $title = .Site.Title }}
-{{ else if .IsPage }}
-  {{ with .Parent }}
-  {{ $title = print .Title " - " $title }}
-  {{ end }}
-{{ else if .IsSection }}
-  {{ $title = print .Site.Title " - "  .Title }}
-{{ end }}
-<meta property="og:title" content="{{ $title }}" >
+{{ if .IsHome -}}
+  <meta property="og:title" content="{{ .Title }}" />
+{{- else -}}
+  <meta property="og:title" content="{{ .Title }} – {{ .Site.Title }}" />
+{{- end }}
 <meta property="og:description" content="{{ with .Description }}{{ . }}{{ else }}{{if .IsPage}}{{ .Summary }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}{{ end }}" >
 <meta property="og:type" content="{{ if .IsPage }}article{{ else }}website{{ end }}" >
 <meta property="og:url" content="{{ .Permalink }}" >
