--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -4,7 +4,7 @@
 {{ if .IsHome -}}
   <title>{{ .Site.Title }}</title>
 {{- else -}}
-  <title>{{ .Title }} – {{ .Site.Title }}</title>
+  <title>{{ .Title }} | {{ .Site.Title }}</title>
 {{- end }}
 
 {{ with $.Param "author" }}<meta name="author" content="{{ . }}">{{ end }}
