--- a/layouts/partials/opengraph.html
+++ b/layouts/partials/opengraph.html
@@ -1,7 +1,7 @@
 {{ if .IsHome -}}
   <meta property="og:title" content="{{ .Title }}" />
 {{- else -}}
-  <meta property="og:title" content="{{ .Title }} – {{ .Site.Title }}" />
+  <meta property="og:title" content="{{ .Title }} | {{ .Site.Title }}" />
 {{- end }}
 <meta property="og:description" content="{{ with .Description }}{{ . }}{{ else }}{{if .IsPage}}{{ .Summary }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}{{ end }}" >
 <meta property="og:type" content="{{ if .IsPage }}article{{ else }}website{{ end }}" >
