--- a/layouts/partials/twitter_cards.html
+++ b/layouts/partials/twitter_cards.html
@@ -21,7 +21,7 @@
 {{ if .IsHome -}}
   <meta name="twitter:title" content="{{ .Title }}" />
 {{- else -}}
-  <meta name="twitter:title" content="{{ .Title }} – {{ .Site.Title }}" />
+  <meta name="twitter:title" content="{{ .Title }} | {{ .Site.Title }}" />
 {{- end }}
 <meta name="twitter:description" content="{{ with .Description }}{{ . }}{{ else }}{{if .IsPage}}{{ .Summary }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}{{ end -}}">
 {{ with .Site.Social.twitter -}}
