--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -32,6 +32,10 @@
   <link rel="manifest" href="{{ "/site.webmanifest" | absURL }}">
 {{ end }}
 
+{{ range .AlternativeOutputFormats -}}
+    {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
+{{ end -}}
+
 {{ partial "opengraph.html" . }}
 
 {{ partial "twitter_cards.html" . }}
