Fix display of content and footer

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -5,7 +5,7 @@
   </head>
   <body class="has-background-dark has-text-light has-navbar-fixed-top">
       {{- partial "header.html" . -}}
-      <div id="wrapper">
+      <div id="wrapper" class="has-background-dark pb-5">
         {{- block "main" . }}{{- end }}
       </div>
       {{- partial "footer.html" . -}}
